config/thanos/ingress-query.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query
spec:
  rules:
    - host: thanos-query.172.31.0.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-query
                port:
                  number: 9090
